# amethyst

./: .gitignore  Cargo.toml  Dockerfile  amethyst.toml  amethyst.yaml  test.toml  test.yaml
src/: config.rs  http.rs  main.rs  registry.rs  result.rs  scriptlets.rs  storage.rs
src/command/: build.rs
src/config/: image.rs  module.rs  scriptlet.rs  scriptlets.rs
src/config/image/: attribute.rs  tag.rs  typ.rs
src/config/image/attribute/: typ.rs
src/registry/: docker_hub.rs  registry.rs
src/registry/docker_hub/: error.rs  manifest.rs  token.rs
tests/: build.rs
