[package]
name = "amethyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
clap = { version = "3.1.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
xdg = "^2.1"

[dev-dependencies]
tempfile = "3"
