[package]
name = "amethyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
clap = { version = "3.1.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = { version = "1", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
